--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -8,8 +8,8 @@
         <input type="text" class="form-control" id="name" name="name" value="{{ item.name }}" required>
     </div>
     <div class="form-group">
-        <label for="description">Description</label>
-        <input type="text" class="form-control" id="description" name="description" value="{{ item.service }}">
+        <label for="description">Serviço contratado</label>
+        <input type="text" class="form-control" id="description" name="service" value="{{ item.service }}">
     </div>
     <button type="submit" class="btn btn-primary">Update</button>
 </form>
